# Diplo-DespliegueML

./: .gitignore  pyproject.toml
tests/integration/: __init__.py  test_integration.py
tests/unit/: test_add_to_list.py  test_check_list.py  test_get_filename.py  test_get_list_path.py  test_load_list.py  test_store_list.py  test_update_list.py
todo_list/: main.py
todo_list/todos/: todos.py
