[tool.poetry]
name = "todo-list"
version = "0.1.0"
description = ""
authors = ["christianrv007 <40001043+christianrv007@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "todo_list"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
